--- a/css/creative.css
+++ b/css/creative.css
@@ -13,19 +13,11 @@ body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
 
 hr {
-  border: 0;
-  text-align: center;
-  line-height: 0px;
-  font-size: 2em;
-  margin: 40px 10px; }
-
-hr:before {
-  content: "\1F65C";
-  display: inline; }
-
-/* opera doesn't render correctly. hide section sign */
-x:-o-prefocus, hr:after {
-  content: ""; }
+  max-width: 50px;
+  border-width: 3px;
+  border-color: #a93f55;
+  margin-top: 30px;
+  margin-bottom: 30px; }
 
 hr.light {
   border-color: white; }
@@ -44,13 +36,17 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  margin-bottom: 40px; }
 
 p {
   font-size: 16px;
   line-height: 1.5;
   margin-top: 10px;
   margin-bottom: 10px; }
+
+.avoid-wrap {
+  display: inline-block; }
 
 .bg-primary {
   background-color: #a93f55 !important; }
@@ -97,9 +93,10 @@ footer {
   color: rgba(255, 255, 255, 0.7);
   padding: 15px 0; }
   footer h4 {
-    font-size: 16px; }
+    font-size: 12pt;
+    margin-bottom: 7pt; }
   footer p {
-    font-size: 12px;
+    font-size: 9pt;
     margin: 0; }
 
 #mainNav {
@@ -112,10 +109,14 @@ footer {
   #mainNav .navbar-brand {
     color: #a93f55;
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-    font-weight: 700;
-    text-transform: uppercase; }
+    font-weight: 600;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding-top: 3px; }
     #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
       color: #a93f55; }
+  #mainNav a.navbar-brand {
+    display: none; }
   #mainNav .navbar-toggle {
     font-weight: 700;
     font-size: 12px;
@@ -137,6 +138,9 @@ footer {
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover,
       #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover {
         background-color: transparent; }
+  @media (min-width: 450px) {
+    #mainNav a.navbar-brand {
+      display: inline-block; } }
   @media (min-width: 992px) {
     #mainNav {
       background-color: transparent;
@@ -145,6 +149,8 @@ footer {
         color: rgba(255, 255, 255, 0.7); }
         #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
           color: white; }
+      #mainNav a.navbar-brand {
+        display: none; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link,
       #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
         color: rgba(255, 255, 255, 0.7); }
@@ -155,10 +161,11 @@ footer {
         background-color: #eee9e9;
         border-color: rgba(109, 112, 140, 0.05); }
         #mainNav.navbar-shrink .navbar-brand {
-          color: #a93f55;
-          font-size: 16px; }
+          color: #a93f55; }
           #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
             color: #a93f55; }
+        #mainNav.navbar-shrink a.navbar-brand {
+          display: inline-block; }
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
           color: #6d708c; }
@@ -182,22 +189,25 @@ header.masthead {
     position: relative;
     text-align: center;
     padding: 100px 15px 100px;
-    width: 100%; }
+    width: 100%;
+    -webkit-transform: translateY(10%);
+    -ms-transform: translateY(10%);
+    transform: translateY(10%); }
     header.masthead .header-content .header-content-inner h1 {
       font-weight: 700;
       text-transform: uppercase;
       margin-top: 0;
-      margin-bottom: 0;
-      font-size: 30px; }
+      margin-bottom: 50px;
+      font-size: 35px; }
     header.masthead .header-content .header-content-inner hr {
-      margin: 50px auto; }
+      margin: 30px auto; }
     header.masthead .header-content .header-content-inner p {
       font-weight: 300;
       color: rgba(255, 255, 255, 0.9);
       font-size: 16px;
       margin-bottom: 20px; }
     header.masthead .header-content .header-content-inner a {
-      margin-top: 50px; }
+      margin-top: 30px; }
   header.masthead .intro-details p {
     font-size: 12px; }
   @media (min-width: 768px) {
@@ -217,11 +227,15 @@ header.masthead {
           margin-right: auto; }
           header.masthead .header-content .header-content-inner h1 {
             font-size: 50px; }
+          header.masthead .header-content .header-content-inner hr {
+            margin: 50px auto; }
           header.masthead .header-content .header-content-inner p {
             font-size: 18px;
             max-width: 80%;
             margin-left: auto;
-            margin-right: auto; } }
+            margin-right: auto; }
+          header.masthead .header-content .header-content-inner a {
+            margin-top: 50px; } }
 
 .service-box {
   max-width: 400px;
@@ -278,24 +292,25 @@ header.masthead {
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
       font-size: 22px; } }
 
-#contact {
-  padding-bottom: 0; }
-  #contact .map {
-    background-color: #e3dbdb;
-    margin: 40px 0;
-    padding: 20px 0; }
-    #contact .map .map-cover {
-      z-index: 1;
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 100%; }
-    #contact .map .map-canvas iframe {
-      border: 0;
-      width: 100%;
-      height: 500px; }
-    #contact .map .map-address {
-      margin: 30px 0 60px; }
+#contact .map {
+  background-color: #e3dbdb;
+  margin: 40px 0;
+  padding: 20px 0; }
+  #contact .map .map-cover {
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+  #contact .map .map-canvas iframe {
+    border: 0;
+    width: 100%;
+    height: 500px; }
+  #contact .map #address {
+    -webkit-transform: translateY(-10%);
+    -ms-transform: translateY(-10%);
+    transform: translateY(-10%);
+    margin-top: 40px; }
 
 .text-primary {
   color: #a93f55 !important; }
@@ -390,6 +405,9 @@ header.masthead {
 
 .navbar-toggler {
   z-index: 1; }
+
+body {
+  overflow-x: hidden; }
 
 @media (max-width: 576px) {
   nav > .container {
