--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -33,6 +33,12 @@
     z-index: 1;
 }
 
+// XXX horizontal scrollbar fix
+// https://stackoverflow.com/questions/23768152/using-container-fluid-within-bootstrap-cause-horizontal-scrollbar
+body {
+  overflow-x: hidden;
+}
+
 @media (max-width: 576px) {
     nav > .container {
         width: 100%;
