--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -13,16 +13,19 @@ header.masthead {
         text-align: center;
         padding: 100px 15px 100px;
         width: 100%;
+        -webkit-transform: translateY(10%);
+        -ms-transform: translateY(10%);
+        transform: translateY(10%);
         .header-content-inner {
             h1 {
                 font-weight: 700;
                 text-transform: uppercase;
                 margin-top: 0;
-                margin-bottom: 0;
-                font-size: 30px;
+                margin-bottom: 50px;
+                font-size: 35px;
             }
             hr {
-                margin: 50px auto;
+                margin: 30px auto;
             }
             p {
                 font-weight: 300;
@@ -31,7 +34,7 @@ header.masthead {
                 margin-bottom: 20px;
             }
             a {
-              margin-top: 50px;
+                margin-top: 30px;
             }
         }
     }
@@ -57,11 +60,17 @@ header.masthead {
                 h1 {
                     font-size: 50px;
                 }
+                hr {
+                    margin: 50px auto;
+                }
                 p {
                     font-size: 18px;
                     max-width: 80%;
                     margin-left: auto;
                     margin-right: auto;
+                }
+                a {
+                    margin-top: 50px;
                 }
             }
         }
