--- a/css/creative.css
+++ b/css/creative.css
@@ -99,19 +99,18 @@ footer {
     font-size: 9pt;
     margin: 0; }
 
-.headroom {
-  will-change: transform;
-  transition: transform 200ms linear; }
-
-.headroom--pinned {
-  -webkit-transform: translateY(0%);
-  -ms-transform: translateY(0%);
-  transform: translateY(0%); }
-
-.headroom--unpinned {
-  -webkit-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  transform: translateY(-100%); }
+@media (max-width: 992px) {
+  .headroom {
+    will-change: transform;
+    transition: transform 200ms linear; }
+  .headroom--pinned {
+    -webkit-transform: translateY(0%);
+    -ms-transform: translateY(0%);
+    transform: translateY(0%); }
+  .headroom--unpinned {
+    -webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%); } }
 
 #mainNav {
   background-color: #eee9e9;
