--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -36,7 +36,7 @@ header.masthead {
                 margin-bottom: 20px;
             }
             a {
-                margin-top: 30px;
+                margin: 30px;
             }
         }
     }
