--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -77,6 +77,9 @@
         .navbar-title {
             display: inline-block;
         }
+        .notice {
+            color: #292b2c;
+        }
     }
 
     @media (min-width: 992px) {
